added status functionality

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+<div id="puzzle"></div>
+<div id="guesses"></div>
 
 <body>
     <script src="hangman.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
