added random puzzle generation and other features

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<div id="puzzle"></div>
-<div id="guesses"></div>
 
 <body>
+    <div id="puzzle"></div>
+    <div id="guesses"></div>
+    <button id="reset">Reset</button>
+
+    <script src="requests.js"></script>
     <script src="hangman.js"></script>
     <script src="app.js"></script>
 </body>
