--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles/styles.css">
+    <title>Hangman</title>
 </head>
 
 <body>
-    <div id="puzzle"></div>
-    <div id="guesses"></div>
-    <button id="reset">Reset</button>
+    <div>
+        <div id="puzzle" class="puzzle"></div>
+        <div id="guesses"></div>
+        <button id="reset" class="button">Reset</button>
+    </div>
 
-    <script src="requests.js"></script>
-    <script src="hangman.js"></script>
-    <script src="app.js"></script>
+    <script src="scripts/requests.js"></script>
+    <script src="scripts/hangman.js"></script>
+    <script src="scripts/app.js"></script>
 </body>
 
 </html>
